--- a/main.tex
+++ b/main.tex
@@ -129,7 +129,7 @@
     
 % document starts here
 
-% I suggest creating separate .tex for each chapters (in the chapter folder) and then use \include here to render them. This allows to edit chapters individually (faster compiling, especially here in overleaf) and to rearrange them more easily.
+% I suggest creating separate .tex for each chapters (in the chapter folder) and then use \include here to render them. This allows to edit chapters individually (faster compiling, especially in Overleaf) and to rearrange them more easily.
 
 %%%%%%%%%%%%
 %%APPENDIX%%
