--- a/SciNoteX.tex
+++ b/SciNoteX.tex
@@ -9,7 +9,12 @@
 \usepackage[export]{adjustbox}
 \usepackage{tikz, tcolorbox}
 \usepackage{multirow, booktabs, makecell, diagbox}
-
+\usepackage{microtype}
+\usepackage{textcase}
+\usepackage[font=small,labelfont=bf]{caption}[2023/03/12]
+\usepackage{xspace}
+\usepackage[fixed]{fontawesome5}
+\usepackage{scrextend}
 
 %%%%%%%%%%%%%%%%%%%%%
 %%OPTIONAL PACKAGES%%
@@ -22,7 +27,6 @@
 %\usepackage{thmbox} %theorems boxes
 %\usepackage{arydshln} %dashed line in tables
 %\usepackage{chronosys} %create timelines
-%\usepackage[labelfont=bf]{caption} %bold figures' labels
 
 %\usepackage{lipsum} %testing purposes package
 
@@ -75,6 +79,8 @@
     pdftitle={PDF TITLE},
     }
 
+\input{scinotex-config.tex}    
+
 %%%%%%%%%%%%
 %%DOCUMENT%%
 %%%%%%%%%%%%
@@ -82,41 +88,7 @@
 \begin{document}
 
 % title page
-\begin{titlepage}
-   \begin{center}
-        \vspace*{1cm}
-        
-        % logo 
-        \includegraphics[width=0.25\textwidth]{logo.jpg}        
-        \vspace{1.5cm}
-        
-        % university name and course
-        \large
-        \textbf{UNIVERSITÀ DEGLI STUDI DI VERONA}
-        
-        \vspace{0.5cm}
-        MASTER'S DEGREE IN MOLECULAR AND MEDICAL BIOTECHNOLOGY
-        
-        % title and subtitle
-        \vspace{1.5cm}
-        \huge
-        \textbf{Title}
-        
-        \vspace{0.5cm}
-        \large
-        SUBTITLE
-        
-        % author/professor
-        \large
-        \vspace{1.5cm}
-        Lecturer:
-        
-        % academic year
-        \vfill
-        A.y. 
-            
-   \end{center}
-\end{titlepage}
+\include{FrontBackMatter/TitlePage}
 
 % insert blank page after titlepage
 \newpage
