added chapter directory

--- a/SciNoteX.tex
+++ b/SciNoteX.tex
@@ -28,7 +28,7 @@
 %\usepackage{arydshln} %dashed line in tables
 %\usepackage{chronosys} %create timelines
 
-%\usepackage{lipsum} %testing purposes package
+\usepackage{lipsum} %testing purposes package
 
 %%%%%%%%%%%%%%%%%%%%%%
 %%LANGUAGE SELECTION%%
@@ -102,6 +102,8 @@
 % document starts here
 
 % I suggest creating separate .tex for each chapters (in the chapter folder) and then use \include here to render them. This allows to edit chapters individually (faster compiling, especially in Overleaf) and to rearrange them more easily.
+
+\include{Chapters/Chapter01}
 
 %%%%%%%%%%%%
 %%APPENDIX%%
