--- a/scinotex-config.tex
+++ b/scinotex-config.tex
@@ -14,3 +14,15 @@
 
 \newcommand{\myYear}{Academic year\xspace}
 \newcommand{\myLocation}{Location\xspace}
+
+%%%%%%%%%%%%%%%%%%%%%
+%% USEFUL COMMANDS %%
+%%%%%%%%%%%%%%%%%%%%%
+% C ++ 
+\newcommand{\CC}{C\nolinebreak\hspace{-.05em}\raisebox{.4ex}{\tiny\bf +}\nolinebreak\hspace{-.10em}\raisebox{.4ex}{\tiny\bf + }}
+
+% i.e.
+\newcommand{\ie}{i.\,e.}
+
+%e.g.
+\newcommand{\eg}{e.\,g.}
