better hyperref setup

--- a/SciNoteX.tex
+++ b/SciNoteX.tex
@@ -21,7 +21,7 @@
 %%%%%%%%%%%%%%
 %% PACKAGES %%
 %%%%%%%%%%%%%%
-\include{scinotex-packages}
+\input{scinotex-packages}
 \usepackage{lipsum} %testing purposes package
 
 %%%%%%%%%%%%%%%%%%%%%%
