--- a/scinotex-config.tex
+++ b/scinotex-config.tex
@@ -26,3 +26,15 @@
 
 %e.g.
 \newcommand{\eg}{e.\,g.}
+
+%%%%%%%%%%%
+%% LINKS %%
+%%%%%%%%%%%
+% link style and pdf title
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    allcolors=., % no color links
+    pdftitle={\myCourse},
+    pdfauthor={\myName, \myUni}
+    }
